force-app/main/default/objects/OTP_Verification_Event__e.object
<CustomObject>
    <description>OTP Id verification events are published by the LWC otpGenerator. Event types are
1. sent
2. verified
3. failed
4. experian</description>
    <fields>
        <fullName>Address_Id__c</fullName>
        <description>Id of address record (Phone__c or Email__c) to which the OTP was sent.</description>
        <label>Address Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <description>The obfuscated address to which the OTP was sent. e.g. XXXXXXXX7056</description>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <description>The OTP channel to which the OTP was sent. e.g. SMS, EMAIL</description>
        <label>Channel</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <description>Id of Contact to whom the OTP was sent</description>
        <label>Contact Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <description>Type of OTP event. 
1. SENT
2. VERIFIED
3. FAILED</description>
        <label>Event Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <description>Id of rexcord from which the OTP was generated. e.g. Case record.</description>
        <label>Record Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <description>Id of User who generated the OTP</description>
        <label>User Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>OTP Verification Event</label>
    <pluralLabel>OTP Verification Events</pluralLabel>
</CustomObject>